[package]
name = "ethink-node"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition.workspace = true
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "ethink-node"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"]}
hex-literal.workspace = true

sc-cli = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sp-core = { workspace = true, default-features = false }
sc-executor = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sc-network = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sc-service = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sc-telemetry = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sc-transaction-pool = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sc-transaction-pool-api = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sc-offchain = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sc-consensus-aura = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sc-client-api = { workspace = true, default-features = false }
sp-consensus-aura = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sc-consensus = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sc-consensus-grandpa = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sp-consensus-grandpa = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sp-keystore = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-io = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sp-timestamp = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sp-inherents = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sp-keyring = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
frame-system = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
pallet-transaction-payment = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sp-api = { workspace = true, default-features = false }
sc-rpc = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sc-rpc-api = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sp-blockchain = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sp-block-builder = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
sc-basic-authorship = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
substrate-frame-rpc-system = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
pallet-transaction-payment-rpc = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
frame-benchmarking-cli = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }

# Local Dependencies
ethink-runtime.workspace = true
ethink-rpc.workspace = true
ep-rpc = { workspace = true, features = ["default"] }
ep-crypto.workspace = true

# CLI-specific dependencies
try-runtime-cli = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }

[dev-dependencies]
# needed in e2e tests
ureq = { version = "2.9.6", features = ["json"] }
tokio = { version = "1.36", features = ["rt", "macros"] }
serde_json = "1.0"
subxt = "0.29.0"
log.workspace = true
sp-weights = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink" }
hex.workspace = true

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
]
