[package]
name = "ethink-node"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition.workspace = true
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "ethink-node"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"]}
hex-literal.workspace = true

sc-transaction-pool-api.workspace = true
sc-client-api.workspace = true
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sp-core.workspace = true
sp-keystore.workspace = true
sp-runtime.workspace = true
sp-io.workspace = true
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
frame-system.workspace = true
pallet-transaction-payment.workspace = true

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true, features = ["server"] }
sp-api.workspace = true
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sp-blockchain.workspace = true
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }

# Local Dependencies
ethink-runtime.workspace = true
ethink-rpc.workspace = true
ep-rpc = { workspace = true, features = ["default"] }
ep-mapping = { workspace = true, features = ["default"] }
ep-crypto.workspace = true

# CLI-specific dependencies
try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916", optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", rev = "336916" }

[dev-dependencies]
# needed in e2e tests
ureq = { version = "2.9.6", features = ["json"] }
tokio = { version = "1.36", features = ["rt", "macros"] }
serde.workspace = true
serde_json.workspace = true
subxt = "0.29.0"
log.workspace = true
sp-weights.workspace = true
hex.workspace = true
ethereum.workspace = true

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
]
