[package]
name = "ethink-node"
version = "0.2.0"
description = "ethink! node (based on substrate-node-template)."
authors.workspace = true
edition.workspace = true
license = "Apache 2.0"
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "ethink-node"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"]}
hex-literal.workspace = true
serde_json = { workspace = true, features = ["arbitrary_precision"] }

# Substrate
sp-consensus-aura = { workspace = true, features = ["default"] }
sp-consensus-grandpa.workspace = true
sp-core.workspace = true
sp-inherents = { workspace = true, features = ["default"] }
sp-io.workspace = true
sp-keyring.workspace = true
sp-keystore.workspace = true
sp-runtime.workspace = true
sp-timestamp.workspace = true
sc-cli.workspace = true
sc-client-api.workspace = true
sc-consensus-aura.workspace = true
sc-consensus-grandpa.workspace = true
sc-consensus.workspace = true
sc-executor.workspace = true
sc-network = { workspace = true, features = ["default"] }
sc-offchain.workspace = true
sc-service.workspace = true
sc-telemetry.workspace = true
sc-transaction-pool-api.workspace = true
sc-transaction-pool.workspace = true
frame-system.workspace = true
pallet-transaction-payment.workspace = true

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true, features = ["server"] }
sp-blockchain.workspace = true
sp-block-builder.workspace = true
sp-api = { workspace = true, features = ["default"] }
sc-basic-authorship.workspace = true
sc-rpc.workspace = true
sc-rpc-api.workspace = true
sc-network-sync.workspace = true
substrate-frame-rpc-system.workspace = true
pallet-transaction-payment-rpc.workspace = true

# These dependencies are used for runtime benchmarking
frame-benchmarking.workspace = true
frame-benchmarking-cli.workspace = true

# Local Dependencies
ethink-rpc.workspace = true
ethink-runtime = { workspace = true, features = ["default"] }
pallet-ethink = { workspace = true, features = ["default"] }
ep-mapping = { workspace = true, features = ["default"] }
ep-eth = { workspace = true, features = ["default"] }

# CLI-specific dependencies
try-runtime-cli = { workspace = true, optional = true }

[build-dependencies]
substrate-build-script-utils.workspace = true

[dev-dependencies]
# needed in e2e tests
tokio = { version = "1.36", features = ["rt", "macros"] }
ureq = { version = "2.9.6", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
subxt = "0.37.0"
sp-weights.workspace = true
log.workspace = true
hex.workspace = true

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
]
