[package]
name = "ethink-runtime"
version = "0.1.0"
authors = ["Alexander Gryaznov <hi@agryaznov.com>"]
edition.workspace = true
license = "Unlicense"
repository = "https://github.com/agryaznov/ethink"
build = "build.rs"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
# TODO use from workspace
pallet-aura = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-grandpa = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-assets = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-balances.workspace = true
frame-support = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-sudo = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
frame-system = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-timestamp = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-transaction-payment = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
frame-executive = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-api = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-block-builder = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-core.workspace = true
sp-consensus-aura = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-inherents = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-offchain = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-runtime.workspace = true
sp-io = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-session = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-std = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-transaction-pool = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-version = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-utility = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }

# Contracts specific packages
pallet-contracts.workspace = true
pallet-contracts-primitives.workspace = true

# Debbuging
log.workspace = true
sp-debug-derive = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", features = ["force-debug"]}

# ethink
ep-rpc.workspace = true
ep-account.workspace = true
pallet-ethink.workspace = true
ep-self-contained = { workspace = true, features = ["serde"] }

[build-dependencies]
substrate-wasm-builder =  { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", optional = true }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-grandpa/std",
	"pallet-balances/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-assets/std",
	"substrate-wasm-builder",
	"ep-rpc/std",
	"ep-account/std",
	"ep-self-contained/std",
]
