[package]
name = "ethink-runtime"
version = "0.1.0"
authors = ["Alexander Gryaznov <hi@agryaznov.com>"]
edition.workspace = true
license = "Unlicense"
repository = "https://github.com/agryaznov/ethink"
build = "build.rs"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec.workspace = true
scale-info.workspace = true
# Susbtrate
pallet-contracts-primitives.workspace = true
pallet-balances.workspace = true
pallet-aura = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-assets = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-contracts = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
pallet-grandpa = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-sudo = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-timestamp = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-transaction-payment.workspace = true
pallet-utility = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
frame-support.workspace = true
frame-system.workspace = true
frame-executive = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-api.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-io.workspace = true
sp-block-builder = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-consensus-aura = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-inherents = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-offchain = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-session = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-transaction-pool = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
sp-version = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false }

log.workspace = true

# ethink
ep-rpc.workspace = true
ep-crypto.workspace = true
ep-mapping.workspace = true
pallet-ethink.workspace = true
fp-self-contained = { workspace = true, features = ["serde"] }

[build-dependencies]
substrate-wasm-builder =  { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", optional = true }

[features]
default = [
	"std",
]
std = [
	"scale-codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-grandpa/std",
	"pallet-balances/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-assets/std",
	"substrate-wasm-builder",
	"ep-rpc/std",
	"ep-crypto/std",
	"fp-self-contained/std",
	"ep-mapping/std",
]
