[package]
name = "ethink-runtime"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
build = "build.rs"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec.workspace = true
scale-info.workspace = true

# Substrate
sp-api.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura.workspace = true
sp-core.workspace = true
sp-genesis-builder.workspace = true
sp-inherents.workspace = true
sp-io.workspace = true
sp-offchain.workspace = true
sp-runtime.workspace = true
sp-session.workspace = true
sp-std.workspace = true
sp-transaction-pool.workspace = true
sp-version.workspace = true
frame-executive.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pallet-assets.workspace = true
pallet-aura.workspace = true
pallet-balances.workspace = true
pallet-contracts.workspace = true
pallet-grandpa.workspace = true
pallet-insecure-randomness-collective-flip.workspace = true
pallet-sudo.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment.workspace = true
pallet-utility.workspace = true

# Used for the node's RPCs
frame-system-rpc-runtime-api.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true

log.workspace = true

# ethink
ep-eth.workspace = true
pallet-ethink.workspace = true
fp-self-contained = { workspace = true, features = ["serde"] }

# TODO REMOVE
hex.workspace = true

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = [
	"std",
]
std = [
	"scale-codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-grandpa/std",
	"pallet-balances/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-contracts/std",
	"pallet-ethink/std",
	"pallet-assets/std",
	"substrate-wasm-builder",
	"fp-self-contained/std",
	"ep-eth/std",
]
runtime-benchmarks = [
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-ethink/runtime-benchmarks",
]
