[package]
name = "erc20"
version = "4.2.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"
publish = false

[dependencies]
ink = { git = "https://github.com/agryaznov/ink", branch = "ethink", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { git = "https://github.com/agryaznov/ink", branch = "ethink" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
