[package]
name = "erc20"
version = "4.4.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.3.0", default-features = false }
ink_env = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
